--- a/hzcf-demo-master/src/main/webapp/index.html
+++ b/hzcf-demo-master/src/main/webapp/index.html
@@ -30,7 +30,7 @@
       <!-- mini logo for sidebar mini 50x50 pixels -->
       <span class="logo-mini"><b>人人</b></span>
       <!-- logo for regular state and mobile devices -->
-      <span class="logo-lg"><b>汇中财富系统</b></span>
+      <span class="logo-lg"><b>汇中财富后台管理系统</b></span>
     </a>
     <!-- Header Navbar: style can be found in header.less -->
     <nav class="navbar navbar-static-top" role="navigation">
@@ -41,7 +41,6 @@
 	  <div style="float:left;color:#fff;padding:15px 10px;">欢迎 {{user.username}}</div>
       <div class="navbar-custom-menu">
         <ul class="nav navbar-nav">
-          <li><a href="http://www.renren.io" target="_blank"><i class="fa fa-home"></i> &nbsp;编程教程</a></li>
 		  <li><a href="javascript:;" @click="updatePassword"><i class="fa fa-lock"></i> &nbsp;修改密码</a></li>
           <li><a href="logout"><i class="fa fa-sign-out"></i> &nbsp;退出系统</a></li>
 		</ul>
