--- a/hzcf-demo-master/src/main/webapp/index.html
+++ b/hzcf-demo-master/src/main/webapp/index.html
@@ -28,7 +28,7 @@
   <header class="main-header">
     <a href="javascript:void(0);" class="logo">
       <!-- mini logo for sidebar mini 50x50 pixels -->
-      <span class="logo-mini"><b>人人</b></span>
+      <span class="logo-mini"><b>汇中财富</b></span>
       <!-- logo for regular state and mobile devices -->
       <span class="logo-lg"><b>汇中财富后台管理系统</b></span>
     </a>
